# autochthon

./: .gitignore  README.md  isa.yaml  makefile
avm/src/: CMakeLists.txt  main.cpp
avm/src/driver/: main.cpp
avm/src/fuzz/: fuzzer.cpp
avm/src/lib/: bits.cpp  bits.h  exceptions.cpp  exceptions.h  inputoutput.cpp  interpreter.cpp  intrinsic.cpp  intrinsic.h  memory.cpp  memory.h  program.cpp  register.cpp  symbol.cpp
avm/src/lib/include/libavm/: binaryreader.h  inputoutput.h  instruction.h  interpreter.h  intrinsic.h  memory.h  program.h  register.h  symbol.h
avm/src/test/: interpreter_test.cpp  intrinsic_test.cpp  memory_test.cpp  program_test.cpp  symbol_test.cpp
codegen/: codegen.py  cppgenerator.py  filewriter.py  isaconfig.py  rustgenerator.py
virtualmachine/src/: bits.rs  executable.rs  gen.rs  main.rs  memory.rs  module.rs  program.rs  symbol.rs
